# baseprogram

./: .gitignore  API_DOCS.md  CARBON_CREDIT_SYSTEM_DESIGN.md  LEARNING.md  README.md  auth.py  chat.py  check.py  config.py  database.py  emd.py  finalmodel.py  init_db.py  insert_dummy_data.py  main.py  migrate_pure_schema.py  pyproject.toml  requirements.txt  systemprompt.md
clients/: __init__.py  sarvam_client.py
models/: __init__.py  conversation.py  farm.py  plant_discovery.py  user.py
routers/: __init__.py  aihelp.py  auth.py  challenge.py  farmservice.py  leaderboard.py  users.py
schemas/: __init__.py  aihelp.py  auth.py  farm.py  plant.py  user.py
services/: __init__.py  ai_service.py  memory_service.py  plant_ai_service.py  plantnet_service.py  retrieval_service.py  streak_service.py
static/css/: aihelp.css  challenge.css  custom.css
static/js/: aihelp.js  auth.js  challenge.js  farmservice.js  leaflet-measure-polygon.js  mapHandler.js  utils.js
templates/: aihelp.html  base.html  challenge.html  dashboard.html  error.html  farmservice.html  home.html  leaderboard.html  login.html  profile.html  profile_edit.html  register.html
utils/: __init__.py  carbon_calculator.py  geospatial.py
